--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4357789002'>Job Application for Senior Product Manager, Infrastructure at GitLab</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4368627002'>Job Application for Senior Product Designer,  Growth at GitLab</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://invers.recruitee.com/o/product-manager-new-mobility-wmd'>
       Product Manager New Mobility (w/m/d) - INVERS
     </a></h5> 
@@ -62,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692335739-product-designer'>GSOFT Product Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692335739-product-designer'>GSOFT Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -104,7 +112,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/bf06062d-64ca-405b-b0e1-e496103472f4'>Fanatics - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/bf06062d-64ca-405b-b0e1-e496103472f4'>Fanatics - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -116,7 +124,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurostar.workable.com/j/8ED53F77D4'>Eurostar - Jobs: Product Owner - Apply online</a></h5> 
+<h5><a href='https://eurostar.workable.com/j/8ED53F77D4'>Eurostar - Jobs: Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -162,7 +170,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digimind.recruiterbox.com/jobs/fk03fte/'>
+<h5><a href='https://digimind.recruiterbox.com/jobs/fk03fte/'>
     Product Owner / AMOA at Digimind
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -198,7 +206,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,7 +230,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/Ykm5T4v6eW/Product-Manager'>Product Manager - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/Ykm5T4v6eW/Product-Manager'>Product Manager - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -230,11 +238,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/I07CAmf6Rw/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/I07CAmf6Rw/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/NlhiSQgJ4u/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/NlhiSQgJ4u/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -264,11 +272,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cargo/c59957bf-b904-49b5-95d0-3d89dd86f96b'>Cargo - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/cargo/c59957bf-b904-49b5-95d0-3d89dd86f96b'>Cargo - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -276,7 +284,7 @@
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://rokk3r.workable.com/j/578D65858E'>Rokk3r - Jobs: Software product Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rokk3r.workable.com/j/578D65858E'>Rokk3r - Jobs: Software product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -292,7 +300,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1787197'>Job Application for Sr. Product Manager at Fitbit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1787197'>Job Application for Sr. Product Manager at Fitbit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -304,7 +312,7 @@
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revolut/18755978-4889-4158-845d-6ce981ce612e'>Revolut - Product Owner - APIs & Integrations</a></h5> 
+<h5><a href='https://jobs.lever.co/revolut/18755978-4889-4158-845d-6ce981ce612e'>Revolut - Product Owner - APIs & Integrations</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -332,7 +340,7 @@ roadmap that heavily leverages Salesforce.com, customer data, and integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://faveo.join.com/jobs/254901-junior-product-manager-m-w-d'>Job @ faveo (Essen): Junior Product Manager (m/w/d) | JOIN</a></h5> 
+<h5><a href='https://faveo.join.com/jobs/254901-junior-product-manager-m-w-d'>Job @ faveo (Essen): Junior Product Manager (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>15. Juli 2019 ... faveo GmbH has a job opening for Junior Product Manager (m/w/d) in Essen (
 published: 06.05.2019). Apply now or check the other available jobs.</p>
@@ -358,7 +366,7 @@ transactions, mobile user acquisition, social networks, commerce and money.</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PeerlessIndustries/743999692397068-senior-product-manager'>Peerless Industries Senior Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PeerlessIndustries/743999692397068-senior-product-manager'>Peerless Industries Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -387,7 +395,7 @@ experience analysis and testing, competitive research and any other relevant?...
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/floqast/6e4d941d-7c4e-4578-8c22-5101d9641afb'>FloQast - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/floqast/6e4d941d-7c4e-4578-8c22-5101d9641afb'>FloQast - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -450,14 +458,6 @@ this?...</p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999692350480-product-manager-all-level-'>Cermati.com Product Manager (All Level) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/graphisoft/jobs/4367320002'>Job Application for Product Designer Manager at Graphisoft</a></h5> 
-<p><span class="badge badge-light">Budapest, Hungary</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/diversatek/job/oxODafwS'>Diversatek, Inc. Careers - Product Manager, Medical Devices</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
