--- a/internship.html
+++ b/internship.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://sygnum.join.com/jobs/253896-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/253896-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">Singapore Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nicesystems/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
+<h5><a href='http://jobs.jobvite.com/nicesystems/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iubenda.workable.com/j/BD007BF8F5'>iubenda - Jobs: Legal Internship - Apply online</a></h5> 
+<h5><a href='https://iubenda.workable.com/j/BD007BF8F5'>iubenda - Jobs: Legal Internship - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -289,7 +289,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
+<h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -309,7 +309,7 @@
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=ookn9fwY&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=n2GOVLwH'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=ookn9fwY&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=n2GOVLwH'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -329,7 +329,7 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/odsEafwd'>Universal Music Group Careers - Fall Internship, Digital Strategic Marketing & Technology- Santa Monica</a></h5> 
+<h5><a href='https://jobs.jobvite.com/universalmusicgroup/job/odsEafwd'>Universal Music Group Careers - Fall Internship, Digital Strategic Marketing & Technology- Santa Monica</a></h5> 
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -349,7 +349,7 @@ the?...</p>
 Culture Manager. Documents: .doc, .docx, .pdf, .rtf, .odt, .txt. CV. Other Documents
 .</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12666&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12666&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Description. Reporting to the Assistant Manager, Administration the incumbent 
 will be providing reception coverage including processing telephone calls,?...</p>
@@ -386,7 +386,7 @@ will be providing reception coverage including processing telephone calls,?...</
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -399,7 +399,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">Salem Salem</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/extremenetworks/job/oyHzafwI'>Extreme Networks Careers - Lab Network Engineer Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/extremenetworks/job/oyHzafwI'>Extreme Networks Careers - Lab Network Engineer Intern</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
